# site-analyser

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.md
src/site_analyser/: __init__.py  analyser.py  api.py  cli.py  exceptions.py  external.py  fetcher.py  manifest.py  schemas.py  signals.py
tests/: conftest.py  test_analyser.py  test_api.py  test_cli.py  test_fetcher_dir.py  test_public_api.py  test_signals.py
